# gds_mobile_player

./: .gitignore  build_log.txt  build_log_v57.txt  build_log_v59.txt  build_log_v59_rev2.txt  build_log_v60.txt  build_log_v61.txt  build_log_v61_rev2.txt  package-lock.json  package.json  package.json''
scripts/: libmpv-ab.sh  version-bump.sh
src-tauri/: Cargo.toml  Cargo.toml''  build.rs  moltenvk_icd.json  tauri.conf.json  tauri.conf.json''
src-tauri/.cargo/: config.toml
src-tauri/android_backup/: AndroidManifest.xml  PlayerActivity.kt  build.gradle.kts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/lib/: README.md  libmpv.dylib
src-tauri/lib/Libmpv.xcframework/: Info.plist
src-tauri/lib/Libmpv.xcframework/ios-arm64/Libmpv.framework/: Libmpv
src-tauri/lib/Libmpv.xcframework/tvos-arm64_arm64e/Libmpv.framework/: Info.plist
src-tauri/lib/Libmpv.xcframework/tvos-arm64_x86_64-simulator/Libmpv.framework/: Info.plist
src-tauri/lib/Libmpv.xcframework/xros-arm64-simulator/Libmpv.framework/: Info.plist  Libmpv
src-tauri/lib/Libmpv.xcframework/xros-arm64/Libmpv.framework/: Info.plist  Libmpv
src-tauri/lib/pkgconfig-example/macos/arm64/: mpv.pc
src-tauri/lib_deps/: libass.dylib  libavcodec.dylib  libavdevice.dylib  libavfilter.dylib  libavformat.dylib  libavutil.dylib  libbluray.dylib  libbz2.dylib  libfreetype.dylib  libfribidi.dylib  libharfbuzz.dylib  libiconv.dylib  liblcms2.dylib  libluajit-5.1.dylib  libplacebo.dylib  libshaderc_shared.dylib  libswresample.dylib  libswscale.dylib  libuchardet.dylib  libz.dylib
src-tauri/lib_hack/: libmpv.dylib
src-tauri/permissions/: commands.json  commands.toml  window.toml
src-tauri/resources/mpv_config/: mpv.conf
src-tauri/scripts/: bundle_framework.sh  embed_libmpv.sh
src-tauri/src/: lib.rs  mpv_render_patch.txt
(+13 files in other folders)
