[package]
name = "flashplex"
version = "1.0.40"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "image-png", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-drag = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
jni = "0.21"
libmpv2 = "5.0"
libmpv2-sys = "4.0"
chrono = "0.4"
tauri-plugin-libmpv = { git = "https://github.com/nini22P/tauri-plugin-libmpv", branch = "main" }
objc = "0.2"
cocoa = "0.24"
libc = "0.2"
dispatch = "0.2"
block = "0.1"
